--- a/ios_yelp_swift-master/Yelp/Base.lproj/Main.storyboard
+++ b/ios_yelp_swift-master/Yelp/Base.lproj/Main.storyboard
@@ -64,8 +64,8 @@
                                                     <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jzc-9P-e9h">
-                                                    <rect key="frame" x="81" y="76.5" width="125" height="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jzc-9P-e9h">
+                                                    <rect key="frame" x="81" y="76.5" width="124.5" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -85,10 +85,12 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Jzc-9P-e9h" firstAttribute="leading" secondItem="4k2-NI-ohe" secondAttribute="leading" id="02S-TN-UOL"/>
+                                                <constraint firstItem="MYd-ax-vU8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udw-fO-LMS" secondAttribute="trailing" constant="8" id="2l9-jj-QcR"/>
                                                 <constraint firstItem="MYd-ax-vU8" firstAttribute="top" secondItem="cJT-M9-l5D" secondAttribute="bottom" constant="5" id="40o-Dm-M5u"/>
                                                 <constraint firstItem="udw-fO-LMS" firstAttribute="leading" secondItem="7oS-8R-FSK" secondAttribute="trailing" constant="3" id="6lN-q9-gjh"/>
                                                 <constraint firstItem="JjY-kf-3SO" firstAttribute="top" secondItem="Fw6-P3-0KL" secondAttribute="top" constant="8" id="ApW-kY-TMI"/>
                                                 <constraint firstItem="Jzc-9P-e9h" firstAttribute="top" secondItem="4k2-NI-ohe" secondAttribute="bottom" constant="2" id="BBd-Mo-CUH"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Jzc-9P-e9h" secondAttribute="trailing" constant="8" id="Cf6-WJ-rem"/>
                                                 <constraint firstItem="udw-fO-LMS" firstAttribute="centerY" secondItem="7oS-8R-FSK" secondAttribute="centerY" id="J16-6u-sLQ"/>
                                                 <constraint firstItem="oIS-ex-oEN" firstAttribute="leading" secondItem="Fw6-P3-0KL" secondAttribute="leading" constant="8" id="K9V-yN-oNK"/>
                                                 <constraint firstItem="4k2-NI-ohe" firstAttribute="leading" secondItem="oIS-ex-oEN" secondAttribute="trailing" constant="8" id="LoR-h8-GUT"/>
